--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.15.0",
-    "multer": "^1.4.5-lts.2"
+    "multer": "^2.0.2"
   }
 }
